--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "limesoda/cashpresso2",
     "description": "cashpresso payment provider",
     "require": {
-        "php": "~7.0.0",
+        "php": "~7.0.0|~7.1.0|~7.2.0",
         "magento/framework": "101.*"
     },
     "type": "magento2-module",
