--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "cashpresso payment provider",
     "require": {
         "php": "~7.0.0|~7.1.0|~7.2.0",
-        "magento/framework": "101.*"
+        "magento/framework": "101.*|102.*"
     },
     "type": "magento2-module",
     "version": "1.1.6",
