--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "limesoda/cashpresso2",
     "description": "cashpresso payment provider",
     "require": {
-        "php": "~7.0.0|~7.1.0|~7.2.0|~7.3.0",
+        "php": "~7.0.0|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
         "magento/framework": "101.*|102.*"
     },
     "type": "magento2-module",
-    "version": "1.1.9",
+    "version": "1.1.10",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
