--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "cashpresso payment provider",
     "require": {
         "php": "~7.0.0|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
-        "magento/framework": "101.*|102.*"
+        "magento/framework": "101.*|102.*|103.*"
     },
     "type": "magento2-module",
-    "version": "1.1.10",
+    "version": "1.1.11",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
